@@ -164,6 +164,7 @@ public class Blacksmithing extends EnhancedCraftingSkill implements ItemCraftor
 			case FURNITURE_SLEEP:
 			case FURNITURE_SIT:
 			case FURNITURE_TABLE:
+			case FURNITURE_HOOK:
 				return true;
 			default:
 				return false;
