@@ -201,6 +201,7 @@ public class ScrimShaw extends EnhancedCraftingSkill implements ItemCraftor, Men
 			case FURNITURE_SLEEP:
 			case FURNITURE_SIT:
 			case FURNITURE_TABLE:
+			case FURNITURE_HOOK:
 				return true;
 			default:
 				return false;
