@@ -57,6 +57,7 @@
  55. New chants: Steal Fortune, Strengthen Seed, Endow Club, Reverse Fortune, Endow Gemstones
  56. New thief skills: Conceal Pathway, Urchin Spy, Fortune Telling
  57. New chants: Curse Seed, Endow Jewelry, Endow Ioun Stone
+ 58. New rideable type: furniture-hook
  
 # Build 5.10.3 Release 01/01/2024
   *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
